--- a/src/main/webapp/WEB-INF/view/jsp/css/jquery_popup.css
+++ b/src/main/webapp/WEB-INF/view/jsp/css/jquery_popup.css
@@ -26,6 +26,8 @@
     margin-left: 65px;}
 #contactdiv_66 h2{
     margin-left: 65px;}
+#contactdiv_666 h2{
+    margin-left: 65px;}
 #contactdiv_3 h3{
     font-size:18px;
     text-align:center;
@@ -35,6 +37,19 @@
     text-align:center;
 }
 #contactdiv_66 h3{
+font-size: 18px;
+text-align: left;
+font-family: monospace;
+font-weight: bold;
+margin: 0px;
+/* margin-bottom: 6px; */
+border-bottom: 1px solid #CECECE;
+padding-bottom: 8px;
+/* margin-bottom: 0px; */
+margin-bottom: 10px;
+
+}
+#contactdiv_666 h3{
 font-size: 18px;
 text-align: left;
 font-family: monospace;
@@ -81,6 +96,9 @@ margin: 0PX;
     font-size:18px;
 }
 #contactdiv_66 {
+    font-size:18px;
+}
+#contactdiv_666 {
     font-size:18px;
 }
 #popup{
@@ -157,6 +175,15 @@ border-radius: 3px;
 padding: 5px;
 margin-bottom: 14px;
 }	
+#contactdiv_666  input[type=text]{
+ width: 100%;
+height: 16px;
+margin-top: 5px;
+border: 1px solid #999;
+border-radius: 3px;
+padding: 5px;
+margin-bottom: 14px;
+}	
 #contactdiv_3  select{
     width:100%;
     height:35px;
@@ -200,6 +227,14 @@ margin-bottom: 14px;
     padding:5px;margin-bottom: 13px;
 }
 #contactdiv_66  select{
+    width:100%;
+    height:35px;
+    margin-top:5px;
+    border:1px solid #999;
+    border-radius:3px;
+    padding:5px;margin-bottom: 13px;
+}
+#contactdiv_666  select{
     width:100%;
     height:35px;
     margin-top:5px;
@@ -285,6 +320,17 @@ min-width: 72px;
 outline: 0;
 padding: 0 8px;
 }
+#contactdiv_666 input[type=button]{
+cursor: default;
+font-size: 11px;
+font-weight: bold;
+height: 29px;
+line-height: 27px;
+margin: 0 16px 0 0;
+min-width: 72px;
+outline: 0;
+padding: 0 8px;
+}
 #contactdiv_77 input[type=button]{
 cursor: default;
 font-size: 11px;
@@ -352,6 +398,10 @@ margin: 0 auto;margin-left: 41px !important;
 	
 	}
 		#contactdiv_66 input[type=file]{
+	border: 1px solid #ccc;
+    padding: 7px;
+	
+	}	#contactdiv_666 input[type=file]{
 	border: 1px solid #ccc;
     padding: 7px;
 	
@@ -426,6 +476,16 @@ text-align: justify;
 	font-family: verdana;
 text-align: justify;
 }
+#contactdiv_666 textarea{
+    width:100%;
+    height:80px;
+    margin-top:5px;
+    border-radius:3px;
+    padding:5px;
+    resize:none;
+	font-family: verdana;
+text-align: justify;
+}
 #contactdiv{ 
 position: absolute;
 top: 0px;
@@ -488,6 +548,18 @@ background: rgba(0, 0, 0, 0.25);
 
 }
 #contactdiv_66{ 
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+background: rgba(0, 0, 0, 0.25);
+    display: none;
+	z-index: 99999;
+
+}
+#contactdiv_666{ 
 
     position: absolute;
     top: 0px;
