--- a/src/main/webapp/WEB-INF/view/jsp/login_pages/forgot.html
+++ b/src/main/webapp/WEB-INF/view/jsp/login_pages/forgot.html
@@ -59,7 +59,7 @@
 			</div>
 			<div class="login-c3">
 				
-				<div class="right"><a href="#" class="whitelink">I can't identify my account</a></div>
+				<div class="right"><a href="javascript:void(0);" class="whitelink">I can't identify my account</a></div>
 			</div>			
 		</div>
 		<!-- End of Login Wrap  -->
