--- a/src/main/webapp/WEB-INF/view/jsp/css/custom.css
+++ b/src/main/webapp/WEB-INF/view/jsp/css/custom.css
@@ -2313,7 +2313,7 @@ position:absolute;
 
 @media (min-width:400px){
 
-	.login-wrap{width:372px;height:380px;margin-top:40%;}
+	.login-wrap{width:372px;height:380px;margin-top:100px;}
 	.cpadding50{padding:50px;}
 	.chpadding50{padding:0 50px;}
 	img.login-img{margin-left:5px; margin-bottom:5px; width:147px!important;}
